--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,16 +83,10 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: #2e5a88;
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+main {
+  background-color: #2e5a88;
 }
 
 a {
