--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,9 +83,18 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: #2e5a88 !important;
+}
+/* 
+input {
+  margin-left: 12px !important;
+} */
+
+main {
   background-color: #2e5a88;
 }
-main {
+
+.blue {
   background-color: #2e5a88;
 }
 
