--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,6 +85,11 @@ body {
   overflow-x: hidden;
   background-color: #2e5a88 !important;
 }
+
+.final-score {
+  margin-top: 200px !important;
+  margin-bottom: auto !important;
+}
 /* 
 input {
   margin-left: 12px !important;
